# crewai

./: README.md
orgi_ai/: README.md  pyproject.toml
orgi_ai/src/orgi_ai/: crew.py  main.py
